manifests/backend/service.yaml
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: cluster-intel
  namespace: utilities
  labels:
    app.kubernetes.io/name: cluster-intel
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: cluster-intel
